--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@farcaster/frame-core": "^0.0.40",
     "@farcaster/frame-sdk": "^0.0.44",
     "@farcaster/frame-wagmi-connector": "^0.0.33",
+    "@farcaster/miniapp-sdk": "^0.1.8",
     "@tanstack/react-query": "^5.76.1",
     "cloudflared": "^0.7.0",
     "ethers": "^5.8.0",
