--- a/package.json
+++ b/package.json
@@ -6,19 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tunnel": "cloudflared tunnel --url http://localhost:3000"
   },
   "dependencies": {
-    "@farcaster/frame-core": "^0.0.40",
-    "@farcaster/frame-sdk": "^0.0.44",
-    "@farcaster/frame-wagmi-connector": "^0.0.33",
-    "@farcaster/miniapp-sdk": "^0.1.8",
+    "@farcaster/miniapp-sdk": "^0.1.10",
+    "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@tanstack/react-query": "^5.76.1",
     "cloudflared": "^0.7.0",
     "ethers": "^5.8.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
-    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
